--- a/package.json
+++ b/package.json
@@ -14,10 +14,19 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
+    "@reduxjs/toolkit": "^2.2.3",
+    "@stripe/react-stripe-js": "^2.6.2",
+    "@stripe/stripe-js": "^3.2.0",
+    "axios": "^1.6.8",
     "chart.js": "^4.4.2",
+    "country-state-city": "^3.2.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.2",
+    "react-hot-toast": "^2.4.1",
+    "react-loader-spinner": "^6.1.6",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-table": "^7.8.0"
   },
